examples/test/testpolicy7667.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7667
  namespace: namespace294
spec:
  podSelector:
    matchLabels:
      key40: value43
      key45: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value0
          key34: value2
          key31: value17
      podSelector:
        matchLabels:
          key21: value31
